-
Bug
-
Resolution: Done
-
P4: Low
-
5.5.0
-
None
-
Windows 8.1, Linux mint and probably more.
Replication:
Create QLineEdit
do setAcceptDrops(true);
do setAlignment(Qt::AlignCenter); this also works with AlignRight
select part (or whole) text in QLineEdit
Try to drag it (you can't)
However you can drag from the place where text would be if it were left aligned