QLineEdit: Unable to drag selected text when aligned right or center

Created local inSelection function to modify the x value (similar to
xToPos()) before sending it to the control. Ran the QLineEdit test and
manually tested with AlignLeft, AlignRight and AlignCenter.

Change-Id: I088430580dc87f3cfff90c4cd9ff90e6ab215f57
Task-number: QTBUG-48495
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>

cregit: e56938b4bb244dfccdb78aed66c842d65fe64c14 https://github.com/qt/qtbase/commit/e56938b4bb244dfccdb78aed66c842d65fe64c14